--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo-app-func",
+  "homepage": "https://Aleksey-arch/github.io/todo-app-func",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^4.1.0",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
