--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-app-func",
-  "homepage": "https://Aleksey-arch/github.io/todo-app-func",
+  "homepage": "https://Aleksey-arch.github.io/todo-app-func",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
