Task validation, edit

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,4 +48,11 @@
         "version": "detect"
     }
   }
+//   ,
+//   "prettier/prettier": [
+//   "error",
+//   {
+//     "endOfLine": "auto"
+//   }
+// ]
 }
