--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,12 @@
       "error",
       2
     ],
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "linebreak-style": [
       0,
       "unix"
