--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todo-app-func",
   "version": "0.1.0",
+  "homepage": "https://Aleksey-arch.github.io/todo-app-func",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
